--- a/CS_GUI/CS_GUI.csproj
+++ b/CS_GUI/CS_GUI.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
@@ -9,5 +9,4 @@
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\FS_Interpreter\FS_Interpreter.fsproj" />
-  </ItemGroup>
-<ItemGroup><Compile Include="..\FS_Interpreter\Simple_Interpreter.fs" /></ItemGroup></Project>
+  </ItemGroup></Project>
