--- a/FS_Interpreter/FS_Interpreter.fsproj
+++ b/FS_Interpreter/FS_Interpreter.fsproj
@@ -11,6 +11,7 @@
     <Compile Include="AST.fs" />
     <Compile Include="SymbolTable.fs" />
     <Compile Include="Parser.fs" />
+    <Compile Include="PlotBuffer.fs" />
     <Compile Include="Evaluator.fs" />
     <Compile Include="Functions.fs" />
     <Compile Include="API.fs" />
