Stop tracking bin and obj folders

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
-./CS_GUI/bin
-./CS_GUI/obj
-./FS_Interpreter/bin
-./FS_Interpreter/obj
+CS_GUI/bin
+CS_GUI/obj
+FS_Interpreter/bin
+FS_Interpreter/obj
+
+
